Added uppercase to names and states, added back button to the actionbar